feature: Improve loading bar and visuals while loading
Also add java args and update assets